added 7 used seeds, more unused (duplicate) seeds; removed embed link from Luwan pic on front page; increase image size on index page; other minor tweaks

--- a/app/views/items/home.html.erb
+++ b/app/views/items/home.html.erb
@@ -2,7 +2,7 @@
 <h1>Project Eco</h1>
 
 <body>
-  <%= link_to image_tag('luwan2.jpg', class: 'w-100 rounded shadow-lg d-block mx-auto', style: 'max-width: 50rem;'), item_path(4) %>
+  <%= image_tag'luwan2.jpg', class: 'w-100 rounded shadow-lg d-block mx-auto', style: 'max-width: 50rem;' %>
   <p>"The Little One"</p>
 
   <h2>Full ownership licenses for original characters. No expiration.</h2>
